tests/spec/emit/snapshots/emit_raw_string_multiline_with_backtick_fallback.snap
---
source: tests/spec/emit/literals.rs
assertion_line: 603
description: "input: \nfn test() -> string {\n  let s = r\"first `tick\nsecond\"\n  s\n}\n"
---
package main

func test() string {
	return "first `tick\nsecond"
}
