tests/spec/emit/snapshots/emit_string_multiline_basic.snap
---
source: tests/spec/emit/literals.rs
assertion_line: 591
description: "input: \nfn test() -> string {\n  let s = \"a\nb\"\n  s\n}\n"
---
package main

func test() string {
	return "a\nb"
}
