tests/spec/emit/snapshots/emit_string_singleline_unchanged.snap
---
source: tests/spec/emit/literals.rs
assertion_line: 615
description: "input: \nfn test() -> string {\n  let s = \"x\"\n  s\n}\n"
---
package main

func test() string {
	return "x"
}
