tests/spec/emit/snapshots/function_returning_enum_with_variant_arity_is_not_a_constructor.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  enum IntList {
    Empty,
    Cons(int, IntList),
  }
  
  fn prepend(value: int, list: IntList) -> IntList {
    IntList.Cons(value, list)
  }
  
  fn small() -> IntList {
    prepend(1, prepend(2, IntList.Empty))
  }
---
package main

func MakeIntListEmpty() IntList {
	return IntList{Tag: IntListEmpty}
}

func MakeIntListCons(arg0 int, arg1 IntList) IntList {
	return IntList{Tag: IntListCons, Cons0: arg0, Cons1: &arg1}
}

type IntListTag int

const (
	IntListEmpty IntListTag = iota
	IntListCons
)

type IntList struct {
	Tag   IntListTag
	Cons0 int
	Cons1 *IntList
}

func prepend(value int, list IntList) IntList {
	return MakeIntListCons(value, list)
}

func small() IntList {
	return prepend(1, prepend(2, MakeIntListEmpty()))
}
