tests/spec/emit/snapshots/interop_array_return_as_slice.snap
---
source: tests/spec/emit/interop_matrix.rs
description: "\nimport \"go:crypto/sha256\"\n\nfn main() {\n  let data = \"hi\" as Slice<byte>\n  let bytes = sha256.Sum256(data).as_slice()\n  let _ = bytes\n}\n"
---
package main

import "crypto/sha256"

func main() {
	data := []byte("hi")
	bytes := func(a [32]byte) []byte {
		out := make([]byte, len(a))
		for i := range a {
			out[i] = a[i]
		}
		return out
	}(sha256.Sum256(data))
	_ = bytes
}
