tests/spec/emit/snapshots/interop_collapsed_empty_varargs_reconstructs_type_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/cat"
  
  fn main() {
    let r: Slice<int> = cat.Cat(1)
  }
---
package main

import "example.com/cat"

func main() {
	_ = cat.Cat[int](1)
}
